<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的日记</string>
    <string name="name">我的日记</string>
    <string name="enter">进入</string>
    <string name="action_new">新建</string>
    <string name="action_password">密码</string>
    <string name="set_password">密码设置</string>
    <string name="no_record">没有记录！</string>
    <string name="set_string_password">设置密码</string>
    <string name="confirm_string_password">确认密码</string>
    <string name="password_input">请输入密码：</string>
    <string name="save">保存</string>
    <string name="draw">绘制解锁图案</string>
    <string name="redraw">再次绘制解锁图案</string>
    <string name="cancel">取消</string>
    <string name="next">继续</string>
    <string name="confirm">确认</string>

</resources>
