<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PicturePasswordActivity"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/draw"
        android:textAppearance="?android:attr/textAppearanceLarge" />   
        
    <com.example.mybook.view.NinePointLineView
        android:id="@+id/nine_point"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/draw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nine_point"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
    	<Button
        	android:id="@+id/cancel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/cancel"
        	android:onClick="cancel" />
    	
    	<Button
        	android:id="@+id/next"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="60dp"
        	android:text="@string/next"
        	android:onClick="next" />
    	
    </LinearLayout>

</RelativeLayout>
